--- a/Documental/web/menuDocumental.xhtml
+++ b/Documental/web/menuDocumental.xhtml
@@ -33,7 +33,7 @@
                     <h:form>
                         <p:panelMenu style="width:165px">
                             <p:submenu label="Radicacion">                                                                  
-                                <p:menuitem value="Entrada" icon="caracterizacion" rendered="#{beanUsuario.asPermission('pMenuRadicEntrada')}" />                                  
+                                <p:menuitem value="Entrada" icon="caracterizacion" rendered="#{beanUsuario.asPermission('pMenuRadicEntrada')}" action="#{beanRadicacion.prepareCreate()}" />                                  
                                 <p:menuitem value="Salida" icon="cambio" rendered="#{beanUsuario.asPermission('pMenuRadicCambio')}" />                                                               
                                 <p:menuitem value="Memorando" icon="documento" rendered="#{beanUsuario.asPermission('pMenuRadicDocumento')}" />                                                               
                             </p:submenu>
