--- a/Documental/web/WEB-INF/plantillas/menuDocumental.xhtml
+++ b/Documental/web/WEB-INF/plantillas/menuDocumental.xhtml
@@ -49,7 +49,8 @@
                                 <p:menuitem value="Nivel Acceso" action="#{beanNivelAcceso.prepareList()}" icon="configurar" immediate="true"  />                                
                                 <p:menuitem value="Tarea" action="#{beanTarea.prepareList()}" icon="configurar" />                                
                                 <p:menuitem value="Tipo Usuario" action="#{beanTipoUsuario.prepareList()}" icon="configurar"  />                                
-                                <p:menuitem value="Tareas Usuario" action="#{beanTusuarioTarea.prepareList()}" icon="configurar"  />                                                                
+                                <p:menuitem value="Tareas Usuario" action="#{beanTusuarioTarea.prepareList()}" icon="configurar"  />  
+                                <p:menuitem value="Dependencias" action="#{beanDependencia.prepareList()}" icon="configurar" />
                             </p:submenu>
                             <p:submenu label="Mi cuenta">                                                                  
                                 <p:menuitem value="Cambiar Contraseña" action="#{beanNivelAcceso.prepareList()}" icon="contrasena" rendered="#{beanUsuario.asPermission('pMenuGralContrasena')}" />                                  
