--- a/Documental/web/menuDocumental.xhtml
+++ b/Documental/web/menuDocumental.xhtml
@@ -53,7 +53,7 @@
                                     <p:menuitem value="Tareas Usuario" action="#{beanTusuarioTarea.prepareList()}" icon="configurar"  />                                                                
                                 </p:submenu>
                                 <p:submenu label="Usuarios">
-                                    <p:menuitem value="Listar Usuarios" action="#{beanNivelAcceso.prepareList()}" icon="configurar" immediate="true"  />                                
+                                    <p:menuitem value="Listar Usuarios" action="#{beanUsuario.prepareList()}" icon="configurar" immediate="true"  />                                
                                     <p:menuitem value="Crear Usuario" action="#{beanUsuario.prepareCreate()}" icon="configurar" />  
                                     <p:menuitem value="Modificar Usuario" action="#{beanNivelAcceso.prepareList()}" icon="configurar" immediate="true"  />                                
                                     <p:menuitem value="Desactivar Usuario" action="#{beanTarea.prepareList()}" icon="configurar" />                                
