--- a/Documental/web/WEB-INF/plantillas/menuDocumental.xhtml
+++ b/Documental/web/WEB-INF/plantillas/menuDocumental.xhtml
@@ -33,7 +33,7 @@
                     <h:form>
                         <p:panelMenu style="width:165px">
                             <p:submenu label="Radicacion">                                                                  
-                                <p:menuitem value="Entrada" icon="caracterizacion" rendered="#{beanUsuario.asPermission('pMenuRadicEntrada')}" />                                  
+                                <p:menuitem value="Entrada" icon="caracterizacion" rendered="#{beanUsuario.asPermission('pMenuRadicEntrada')}" action="#{beanRadicacion.prepareCreate()}" />                                  
                                 <p:menuitem value="Salida" icon="cambio" rendered="#{beanUsuario.asPermission('pMenuRadicCambio')}" />                                                               
                                 <p:menuitem value="Memorando" icon="documento" rendered="#{beanUsuario.asPermission('pMenuRadicDocumento')}" />                                                               
                             </p:submenu>
@@ -53,9 +53,9 @@
                                     <p:menuitem value="Tareas Usuario" action="#{beanTusuarioTarea.prepareList()}" icon="configurar"  />                                                                
                                 </p:submenu> 
                                 <p:submenu label="Usuarios">
-                                    <p:menuitem value="Listar Usuarios" action="#{beanNivelAcceso.prepareList()}" icon="configurar" immediate="true"  />                                
+                                    <p:menuitem value="Listar Usuarios" action="#{beanUsuario.prepareList()}" icon="configurar" immediate="true"  />                                
                                     <p:menuitem value="Crear Usuario" action="#{beanUsuario.prepareCreate()}" icon="configurar" />  
-                                    <p:menuitem value="Modificar Usuario" action="#{beanNivelAcceso.prepareList()}" icon="configurar" immediate="true"  />                                
+                                    <p:menuitem value="Modificar Usuario" action="#{beanUsuario.prepareListEdit()}" icon="configurar" immediate="true"  />                                
                                     <p:menuitem value="Desactivar Usuario" action="#{beanTarea.prepareList()}" icon="configurar" />                                
                                 </p:submenu>
                                 <p:menuitem value="Dependencias" action="#{beanDependencia.prepareList()}" icon="configurar" />
