--- a/Documental/web/GUI/Administrador/Usuarios/GUIUsuarioCrear.xhtml
+++ b/Documental/web/GUI/Administrador/Usuarios/GUIUsuarioCrear.xhtml
@@ -62,7 +62,7 @@
                             </p:selectOneMenu>
                         </p:column>   
                         <p:column colspan="50" style="font-weight: bold;"><h:outputText value="#{bundle.documental_GUIUsuario_Contrasena}"/></p:column>
-                        <p:column colspan="50"><p:inputText style="width: 400px" value="#{beanUsuario.selectedC.contrasena}" required="true" requiredMessage="#{bundle.documental_GUIUsuario_Messages_pContrasena}"></p:inputText></p:column> 
+                        <p:column colspan="50"><p:password style="width: 400px" value="#{beanUsuario.selectedC.contrasena}" required="true" requiredMessage="#{bundle.documental_GUIUsuario_Messages_pContrasena}"></p:password></p:column> 
                     </p:row>    
                 </p:panelGrid>
                 <br></br>
